--- a/Contents Programming.html
+++ b/Contents Programming.html
@@ -10,6 +10,7 @@
 
     body{
       font-family: Helvetica;
+      font-family: '나눔스퀘어_ac ';
       padding: 10px;
       background: White;
     }
@@ -24,6 +25,7 @@
     .header h1 {
       font-size: 45px;
       color: #8B4513; /*Brown*/
+      text-decoration: none;
     }
 
     .topnav {
@@ -36,7 +38,7 @@
       display: block;
       color: #f2f2f2;
       text-align: center;
-      padding: 14px 16px;
+      padding: 20px 24px;
       text-decoration: none;
     }
 
@@ -98,15 +100,15 @@
   </head>
   <body>
     <div class="header">
-      <h1>ABOUT EUI JIN </h1>
-      <h4> DMD Digital Media Design </h4>
+     <a href="index.html"> <img src= './img/EJ.png'></a>
+      <h4> Details about me </h4>
     </div>
 
     <div class="topnav">
       <a href="Contents design.html">Contents Design</a>
       <a href="Video design.html">Video design</a>
       <a href="Contents Programming.html">Contents Programming</a>
-      <a href="Favorites1.html" style="float:right">Favorite</a>
+      
     </div>
 
     <div class="row">
@@ -115,10 +117,15 @@
           <h2>Contents Programming</h2>
           <h3>2020년 1학년 2학기 콘텐츠 프로래밍 직무수행능력평가1</h3>
           <div class="Image"></div>
-          <img src= './img/d.png'>
+          <video width= '100%' height: 410px;  controls >
+            <source src=" MF.mp4" type="video/mp4">
+            <source src=" MF.webm" type="video/webm">
+            <source src=" MF.ogg" type="video/ogg">
+          </video>
+
           <p>이수경 교수님 수업</p>
-          <p> 내가 좋아하는 것들 이라는 주제로 만든 웹페이지. 해당 사진은 메인페이지 캡쳐. <br>
-          중간에 발생하던 오류들 때문에 밤을 새야했지만 완성하고 뿌듯함을 느꼈다. </p>
+          <p> 내가 좋아하는 것들 이라는 주제로 만든 웹페이지. <br>
+          중간에 발생하던 오류들 때문에 밤을 새야했지만 내가 좋아하는 제품들에 대해 소개할 수 있어서 좋은 경험이였고 , 완성하고 뿌듯함을 느꼈다. </p>
         </div>
         <div class="card">
           <h2>Contents Programming</h2>
