--- a/Contents design.html
+++ b/Contents design.html
@@ -10,6 +10,7 @@
 
     body{
       font-family: Helvetica;
+      font-family: '나눔스퀘어_ac ';
       padding: 10px;
       background: White;
     }
@@ -36,7 +37,7 @@
       display: block;
       color: #f2f2f2;
       text-align: center;
-      padding: 14px 16px;
+      padding: 20px 24px;
       text-decoration: none;
     }
 
@@ -98,39 +99,46 @@
   </head>
   <body>
     <div class="header">
-      <h1>ABOUT EUI JIN </h1>
-      <h4> DMD Digital Media Design </h4>
+      <a href="index.html"> <img src= './img/EJ.png'></a>
+      <h4> Details about me </h4>
     </div>
 
     <div class="topnav">
       <a href="Contents design.html">Contents Design</a>
       <a href="Video design.html">Video design</a>
       <a href="Contents Programming.html">Contents Programming</a>
-      <a href="Favorites1.html" style="float:right">Favorite</a>
+
     </div>
 
     <div class="row">
       <div class="leftcolumn">
         <div class="card">
           <h2>Contents design</h2>
-          <h3>2020년 1학년 2학기 콘텐츠 디자인 직무수행능력평가1 </h3>
+          <h3>2020년 1학년 2학기 콘텐츠 디자인 직무수행능력평가2</h3>
+          <video width= '100%' height: 410px;  controls >
+            <source src=" OST.mp4" type="video/mp4">
+            <source src=" OST.webm" type="video/webm">
+            <source src=" OST.ogg" type="video/ogg">
+          </video>
 
-          <div class="Image"></div>
-          <img src= './img/CD.png'>
+
           <p><b>백윤화 교수님 수업</b></p> <br>
-          <p>2학기 중간평가 때 디자인사를 주제로 진행한 카드뉴스타입의 프로젝트이다.<br>
-          내가 뽑은 디자이너는 솔배스로 현대 키네틱타이포그래피를 창시한 인물. <br>
-          1학기때 이어 카드뉴스 타입이라 익숙하지만 한정적인 양식으로 디자인을 풀어내야하는 부분이 어려웠다.
-          1학기때보다 발전한 툴 실력 덕분에 훨씬 수월하게 작업할 수 있었고 하면서 레이아웃에 대한 고민들과 레퍼런스 영향들을 많이 느낄 수 있었기에 발전할 수 있던 계기가 되었다.
+          <p> 콘텐츠 디자인 기말평가 직무수행능력평가2 <br>
+          브랜드 OST를 주제로 진행한 디지털 브로셔. 브랜드의 아이덴티티를 드러냄과 동시에 브랜드 리디자인을 통해 다양한 컨셉으로 변경하였다.<br>
+          xd 작업을 통해 동적인 요소들을 집어넣고 프로토타입을 적용하여 웹페이지를 구현하였다. 더욱 다양한 모션을 넣고 싶었지만 시간부족으로 인해 아쉬움이 남는다. </p>
         </div>
         <div class="card">
           <h2>Contents design </h2>
-          <h3>기말 직무수행능력평가2</h3>
-          <div class="Image"></div> <img src= './img/MP1.png'><img src= './img/MP2.png'><img src= './img/CP1.png'><img src= './img/CP2.png'>
-          <p>이번주 종강을 앞두고 있는 콘텐츠 디자인 기말평가 직무수행능력평가2 <br>
-          브랜드 OST를 주제로 진행한 디지털 브로셔. 브랜드의 아이덴티티를 드러냄과 동시에 브랜드 리디자인을 통해 다양한 컨셉으로 변경하였다.<br>
-          이번주 xd 작업을 통해 동적인 요소들을 집어넣어 완성도를 높여 마무리하려고 한다.</p>
-        </div>
+          <h3>기말 직무수행능력평가1</h3>
+          <div class="Image"></div>
+          <img src= './img/CD.png'>
+            <p><b>백윤화 교수님 수업</b></p> <br>
+
+        <p>2학기 중간평가 때 디자인사를 주제로 진행한 카드뉴스타입의 프로젝트이다.<br>
+        내가 뽑은 디자이너는 솔배스로 현대 키네틱타이포그래피를 창시한 인물. <br>
+        1학기때 이어 카드뉴스 타입이라 익숙하지만 한정적인 양식으로 디자인을 풀어내야하는 부분이 어려웠다.
+        1학기때보다 발전한 툴 실력 덕분에 훨씬 수월하게 작업할 수 있었고 하면서 레이아웃에 대한 고민들과 레퍼런스 영향들을 많이 느낄 수 있었기에 발전할 수 있던 계기가 되었다.
+      </div>
       </div>
       <div class="rightcolumn">
         <div class="card">
