--- a/Video design.html
+++ b/Video design.html
@@ -10,6 +10,7 @@
 
     body{
       font-family: Helvetica;
+      font-family: '나눔스퀘어_ac ';
       padding: 10px;
       background: White;
     }
@@ -36,7 +37,7 @@
       display: block;
       color: #f2f2f2;
       text-align: center;
-      padding: 14px 16px;
+      padding: 20px 24px;
       text-decoration: none;
     }
 
@@ -57,18 +58,21 @@
       padding-left: 20px;
     }
 
-    .fakeimg {
+    /*.fakeimg {
       background-color: #aaa;
       width: 100%;
       padding: 20px;
-    }
+    }*/
 
     .card {
       background-color: #FFFAF0;
       padding: 20px;
       margin-top: 20px;
     }
-
+    a {
+      text-decoration: none;
+      color: Black;
+    }
     .row:after {
       content:"";
       display: table;
@@ -98,15 +102,15 @@
   </head>
   <body>
     <div class="header">
-      <h1>ABOUT EUI JIN </h1>
-      <h4> DMD Digital Media Design </h4>
+      <a href="index.html"> <img src= './img/EJ.png'></a>
+      <h4> Details about me </h4>
     </div>
 
     <div class="topnav">
       <a href="Contents design.html">Contents Design</a>
       <a href="Video design.html">Video design</a>
       <a href="Contents Programming.html">Contents Programming</a>
-      <a href="Favorites1.html" style="float:right">Favorite</a>
+
     </div>
 
     <div class="row">
@@ -115,22 +119,28 @@
           <h2>영상 디자인</h2>
           <h3>2020년 1학년 2학기 영상 디자인 직무수행능력평가1 </h3>
 
-          <div class="Image"></div>
-          <img src= './img/a.png'>
-          <p>장윤제 교수님 수업</p> <br>
+          <video width= '100%' height: 410px;  controls >
+            <source src=" IDUS.mp4" type="video/mp4">
+            <source src=" IDUS.webm" type="video/webm">
+            <source src=" IDUS.ogg" type="video/ogg">
+          </video>
+
+          <h3><p>장윤제 교수님 수업</p> </h3>
           <p>원본영상 : https://youtu.be/SMee6GWQLao <br>
-          아이디어스 앱을 주제로 선정하여 홍보영상을 제작하였다. 전부 일러스트 작업을 바탕으로 아이디어스의 기능들을 소개하며 차별화된 부분들을 보여주는것이 목표였다. <br>
+          아이디어스 앱을 주제로 선정하여 홍보영상을 제작하였다. <br>
+          전부 일러스트 작업을 바탕으로 사진보다 아이디어스의 기능들을 소개하며 차별화된 부분들을 보여주는것이 목표였다.<br>
           손이 많이 가는 작업이였지만 가다듬고 모션작업을 넣을 수록 변해가는 영상을 보며 재미를 느꼈던 중간평가였다. </p>
         </div>
         <div class="card">
-          <h2>영상 디자인</h2>
+          <h2>VIDEO DESIGN | 영상디자인 </h2>
           <h3>2020년 1학년 2학기 영상 디자인 직무수행능력평가2 </h3>
-          <div class="Image"></div> <img src= './img/s.png'>
+          <div class="Image"></div> <img src= './img/SS.png'>
           <p> 장윤제 교수님 수업</p>
-          <p> 원본영상: https://youtu.be/oHsTkSVY1j0 <br>
-          이번주 종강을 앞두고 있는 팀플로 진행하는 직무수행능력평가2로, 서울스토어라는 패션 앱 홍보를 주제로 선정하여 영상을 촬영하였다.<br>
-          시나리오를 두개로 나누어 첫번째는, 기능위주로 일상적인 영상을 담았다. 두번째는, 트레킹을 활용해 감각적이며 룩에 더 집중할 수 있도록 제작하였다. <br>
-          최종 마무리 편집이 완료되지 않은 영상본.</p>
+          <h3> <a href="https://youtu.be/oHsTkSVY1j0">유튜브</a> </h3>
+
+           팀플로 진행한 직무수행능력평가2로, 서울스토어라는 패션 앱 홍보를 주제로 선정하여 영상을 촬영하였다.<br>
+           시나리오를 두개로 나누어 첫번째는, 기능위주로 일상적인 영상을 담았다. 두번째는, 트레킹을 활용해 감각적이며 룩에 더 집중할 수 있도록 제작하였다. <br>
+           코로나로 인해 촬영을 하는것이 힘이 들었지만 친한친구들끼리 재밌고 의미있게 촬영하게 되어 기억에 남는 팀플이다.</p>
         </div>
       </div>
       <div class="rightcolumn">
