--- a/index.html
+++ b/index.html
@@ -1,88 +1,136 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+<title></title>
+<meta charset="utf-8">
+<style>
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-    <style>
-        div.container {
-          width: 100%;
-          border: 1px solid gray;
-        }
-
-        header, footer {
-          padding: 1em;
-          color: white;
-          background-color: black;
-          clear: left;
-          text-align: center;
-        }
-
-nav {
-  float: left;
-  max-width: 160px;
+body {
   margin: 0;
-  padding: 1em;
+  font-family: Arial, Helvetica, sans-serif;
 }
+.header {
+  background-color: #FFFAF0;
+  padding: 50px;
+  text-align: center;
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
 }
-
-nav ul a {
-  text- decoration: none;
+#logo {
+  float: left;
+  margin: 40px 30px 0 20px;
 }
-
-article {
-  margin-left: 170px;
-  border-left: 1px solid gray;
-  padding: 1em;
+.topnav {
   overflow: hidden;
+  background-color: #FA8072;
+  width: 100%;
 }
-</style>
+a {
+  text-decoration: none;
+  color: white;
+}
+h2 {
+  margin-top: 10px;
+}
+h3 {
+  margin-top: 0px;
+}
+h4 {
+  margin-top: 10px;
+}
 
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 20px 24px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color:  #E9967A;
+  color: #8B4513;
+}
+
+.content {
+  background-color: #FFFAF0;
+  background-image : url('img/n.png');
+  padding: 100px;
+  text-align: center;
+}
+
+#main_img {
+  width: 100%;
+  height: 600px;
+  background-image: url('img/MAINEJ1.png');
+  background-repeat: no-repeat;
+  background-position: top center;
+  margin-top: 30px;
+
+}
+
+.footer {
+  background-color: #FA8072;
+  padding: 30px;
+  text-align: center;
+  font-size: 20px;
+  color: #8B4513;
+}
+.audio {
+  float: right;
+}
+
+@media screen and (max-width: 400px) {
+  .topnav a {
+     float: none;
+     width: 100%;
+  }
+}
+
+</style>
 </head>
 <body>
 
-<div>
-
-<header>
-<h1> Perfume </h1>
-</header>
-
-<nav>
-
-  <ul>
-<li> <a href= "index.html"> History</a> </li>
-<li> <a href= "Perfume note.html"> Perfume note</a> </li>
-<li> <a href= "Favorite.html"> Favorite </a> </li>
-  </ul>
-
-</nav>
-
-<article>
-<h1> Perfume 향수 </h1>
-<img src= "img/perfume.jpg">
-<img src= "img/perfume2.jpg">
-<p> 향수는 어원인 라틴어 'Per Fumum'은 '연기를 통한다'는 의미를 담고 있는 향수는 <b> 인류가 최초로 사용한 화장품 </b> 이라고 볼 수 있다.
-<br>약 5000년 전의 고대 사람들이 종교적 의식, 곧 신과 인간과의 교감을 위한 매개체로 사용한데서부터 시작되었다.
-<br>향수 원액의 농도에 따라 퍼퓸, 에스프리드파르퓡, 오드 파뤼핑, 오드뜨왈렛, 오드콜로뉴 로 구분된다.</p>
-
-<p> 향수가 산업으로 발전하기 시작한 시기는 17세기 프랑스의 루이 14세 시대부터라고 할 수 있다.
-<br>당시에는 피혁제품이 주류를 이루고 있었는데, 가죽을 부드럽게 다루는 일이 보급되어 있지 않았기 때문에 가죽에서
-나는 특유의 악취를 없애기를 위한 향료와 향수가 필수품이었다.<br>
-프랑스 궁정에서도 많은 향수가 애용되었는데, 주로 오렌지꽃(네롤리)과 히아신스가 애용되었다고 한다.
-한편 오 드 콜롱(eau de colon)은 18세기 초 독일의 쾰른에서 제조된 향수로, <br> 나폴레옹 원정 때 파리에 전해지면서
-크게 유행한것으로 14세기 로즈메리와 알코올로 만들어진 헝가리 향수가 그 유래이다. <br>19세기 중엽에 이르러서는 산업화의 진전과
-더불어 화학합성 향료가 개발되면서 향수의 대량생산이 이루어졌다. 이로인해 향료,향수의 대중화가 이루어졌다.
-<br>근대 향수산업의 발달을 크게 진전시키는 계기로 패션산업을 손꼽았는데 대표적 인물로는 샤넬, 랑뱅, 지방시, 입생로랑, 장파투 등이 있다.
-</p>
-
-</article>
+  <div class="header">
+  <img src='img/EJ.png' >
+  </div>
 
 
-<footer> Copyright &copy; </footer>
 
+<div class="topnav">
+  <a href="Contents design.html"> Contents design </a>
+  <a href="Video design.html"> Video design </a>
+  <a href="Contents Programming.html"> Contents programming</a>
 </div>
 
-  </body>
+<div class="content">
+  <div class="audio">
+  <audio src="Oh my.mp3" controls autoplay loop> </audio>
+  </div>
+  <section id='main_img'> </section>
+  <h2> UI/UX DESIGNER 김의진 </h2>
+  <h3> KIM EUI JIN</h3>
+  <h4><p> 예비 웹디자이너, 의진입니다. </p><br>
+      <p> BIRTH: 2000.09.18 <br> </p>
+      <p> ATTEND: KAYWON UNIVERSITY OF ART&DESIGN DMD</p>
+      <br>
+      <br>
+      EDUCATION: 2019.02 가락고등학교 졸업</h4>
+      <br>
+      <br>
+      <br>
+      <div class="Image"> <img src='img/ABILITY.png'>
+      </div>
+</div>
+
+<div class="footer">
+  <p><b> copyright_@KIM EUI JIN  </b> </p>
+</div>
+
+</body>
 </html>
