--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ h4 {
 
 .content {
   background-color: #FFFAF0;
-  background-image : url('img/n.png');
+  background-image : url('./img/n.png');
   padding: 100px;
   text-align: center;
 }
@@ -67,7 +67,7 @@ h4 {
 #main_img {
   width: 100%;
   height: 600px;
-  background-image: url('img/MAINEJ1.png');
+  background-image: url('./img/MAINEJ1.png');
   background-repeat: no-repeat;
   background-position: top center;
   margin-top: 30px;
@@ -97,7 +97,7 @@ h4 {
 <body>
 
   <div class="header">
-  <img src='img/EJ.png' >
+  <img src='./img/EJ.png' >
   </div>
 
 
