--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ h4 {
 #main_img {
   width: 100%;
   height: 600px;
-  background-image: url('./img/MAINEJ1.png');
+  background-image: url('./mainej1.png');
   background-repeat: no-repeat;
   background-position: top center;
   margin-top: 30px;
